--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 asgiref==3.8.1
 dj-database-url==2.2.0
 Django==5.1.1
+django-filter==24.3
+django-widget-tweaks==1.5.0
+djangorestframework==3.15.2
 gunicorn==23.0.0
+Markdown==3.7
 packaging==24.1
+pillow==10.4.0
+psycopg2-binary==2.9.9
+python-decouple==3.8
 sqlparse==0.5.1
 typing_extensions==4.12.2
-python-decouple==3.8
-psycopg2-binary==2.9.9
