--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,111 @@
+apturl==0.5.2
 asgiref==3.8.1
+axios==0.4.0
+bcrypt==3.2.0
+blinker==1.4
+Brlapi==0.8.3
+certifi==2020.6.20
+chardet==4.0.0
+cliapp==1.20180812.1
+click==8.0.3
+cloudinary==1.36.0
+cmdtest==0.32+git
+colorama==0.4.4
+command-not-found==0.3
+confusable-homoglyphs==3.3.1
+cryptography==3.4.8
+cupshelpers==1.0
+dbus-python==1.2.18
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
 dj-database-url==2.2.0
-Django==5.1.1
+Django==5.0.7
+django-cloudinary-storage==0.3.0
+django-cors-headers==4.4.0
 django-filter==24.3
+django-jazzmin==3.0.0
+django-registration==3.4
+django-registration-redux==2.13
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
+docutils==0.21.2
+drf-yasg==1.21.7
+duplicity==0.8.21
+fasteners==0.14.1
+future==0.18.2
+gattlib==0.20201113
 gunicorn==23.0.0
-Markdown==3.7
-packaging==24.1
-pillow==10.4.0
+gyp==0.1
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+inflection==0.5.1
+jeepney==0.7.1
+keyring==23.5.0
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==5.3.0
+macaroonbakery==1.3.1
+Mako==1.1.3
+Markdown==3.3.6
+markdown-it-py==3.0.0
+MarkupSafe==2.0.1
+mdurl==0.1.2
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
+olefile==0.46
+packaging==21.3
+paramiko==2.9.3
+pexpect==4.8.0
+Pillow==9.0.1
+protobuf==3.12.4
 psycopg2-binary==2.9.9
+ptyprocess==0.7.0
+PyBluez==0.23
+pycairo==1.20.1
+pycryptodomex==3.11.0
+pycups==2.0.1
+pyenchant==3.2.0
+Pygments==2.18.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pyparsing==2.4.7
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu4
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
 python-decouple==3.8
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+rich==13.8.1
+SecretStorage==3.3.1
+simplejson==3.17.6
+six==1.16.0
 sqlparse==0.5.1
+systemd-python==234
+ttystatus==0.38
 typing_extensions==4.12.2
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+uritemplate==4.1.1
+urllib3==1.26.5
+usb-creator==0.3.7
+wadllib==1.3.6
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
